<resources>
    <string name="app_name">Blabla Watering System</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="sync">Sync</string>
    <string name="deviceCardHeadline">Device:</string>
    <string name="addNewEvent">Add New Event</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="events">Events</string>
    <string name="stations">Stations</string>

    <string name="name">Name</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
</resources>